test/compile_error/redefined.conf.4.def
config static_cast {
	redefined_conf : int;
}
